--- a/index.html
+++ b/index.html
@@ -1,2 +1,16 @@
-Hello, world!
-adding stuff :)
+<!doctype html>
+<html lang ="en">
+  <head>
+    <title> US Women's Gymnastics Championships 2022 </title>
+    <meta charset="utf-7">
+  </head>
+  <body>
+    <h1> Anna Steingruber</h1>
+    <h2> About The Event </h2>
+      <p>
+
+
+
+
+  </body>
+</html>
