--- a/index.html
+++ b/index.html
@@ -2,15 +2,53 @@
 <html lang ="en">
   <head>
     <title> US Women's Gymnastics Championships 2022 </title>
-    <meta charset="utf-7">
+    <meta charset="utf-8">
   </head>
   <body>
     <h1> Anna Steingruber</h1>
     <h2> About The Event </h2>
-      <p>
-
-
-
+      <p>The 2022 US Women's Gymnastics Championships took place in Tampa, FL this year. The event took place August 21-August 23. There are two days of compettion and the combined scores of each day on each event determine the winner. </p>
+    <h2> The Competitors </h2>
+      <p> The competetion is divided into two categories; Juniors and Seniors. The senior category is often deemed more important as these women can compete in the 2022 World Championship and are watched as potentials for the 2024 Olympic Games.</p>
+    <h2> Results </h2>
+      <h3>Junior Results</h3>
+        <ol>
+          <li>Addison Fatta</li>
+          <li>Amelia Disidore</li>
+          <li>Marissa Neal</li>
+          <li>Nola Matthews</li>
+          <li>Levi Jung-Ruivivar</li>
+          <li>Joscelyn Roberson</li>
+        </ol>
+      <h3> Senior Results</h3>
+        <table>
+          <tr>
+            <th>Name</th>
+            <th>Day 1 Score</th>
+            <th>Day 2 Score</th>
+            <th>Total</th>
+          </tr>
+          <tr>
+            <td>Konnor McClain</td>
+            <td>56.40</td>
+            <td> 56.35 </td>
+            <td>112.75</td>
+          </tr>
+          <tr>
+            <td>Shiles Jones</td>
+            <td>57.200</td>
+            <td>55.80 </td>
+            <td>112.00</td>
+          </tr>
+          <tr>
+            <td>Jordan Chiles</td>
+            <td>56.15</td>
+            <td>55.75</td>
+            <td> 111.90</td>
+          </tr>
+        </table>
+    <h2>What Comes Next?</h2>
+      <p>Top individuals in the all-around and event categories have been named to Team USA. Out of the selection of 10 girls, 5 will be chosen for the World Championship team. This is an important step for these girls in cementing themselves as strong competitors in the lead up to the Olympics. </p>
 
   </body>
 </html>
