--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <h1> Anna Steingruber</h1>
-    <h2> About The Event </h2>
+    <h2> US Gymnastics Championships: About The Event </h2>
       <p>The 2022 US Women's Gymnastics Championships took place in Tampa, FL this year. The event took place August 21-August 23. There are two days of compettion and the combined scores of each day on each event determine the winner. </p>
     <h2> The Competitors </h2>
       <p> The competetion is divided into a junior and senior category. The senior category is often deemed more important as these women can compete in the 2022 World Championship and are watched as potentials for the 2024 Olympic Games.</p>
