--- a/germany.html
+++ b/germany.html
@@ -25,21 +25,54 @@
       <h2>People And Society</h2>
         <article>
           <h3>Population</h3>
-          <p>
+          <p>The country has an estimated population of 84,316,622 as of 2022. Population is decreasing 0.11% as of 2022.</p>
+          <p>Birth rates are 9.08 births per 1000 and death rates are 11.98 deaths per 1000. This explains the decreasing population.</p>
+          <p>Germany is the <a href="https://www.cia.gov/the-world-factbook/field/population/country-comparison">18th most populated country</a> in the world.</p>
         </article>
         <article>
           <h3>Ethnic Groups</h3>
-
+          <p>Top groups by nationality are as follow:</p>
+            <ol>
+              <li>German</li>
+              <li>Turkish</li>
+              <li>Polish</li>
+              <li>Syrian</li>
+              <li>Romanian</li>
+            </ol>
         </article>
         <article>
           <h3>Religions</h3>
-        </article>
-        <article>
-          <h3>Age Distribution</h3>
+          <table> <!-- Do I make this a table or descriptive list?-->
+
         </article>
       </section>
       <section id="Government">
         <h2>Government</h2>
+        <article>
+          <h3>Branches of Government/h3>
+          <p>Germany is a federal parliamentary republic. It has a civil law system.</p>
+        </article>
+        <article>
+          <h3>Political Parties and Leaders</h3>
+          <dl>
+            <dt>Alliance '90/Greens</dt>
+            <dd>Ricarda Land and Omid Nouripour</dd>
+            <dt>Alternative for Germany</dt>
+            <dd>Alice Weidel and Tino Chirupalla
+            <dt>Christian Democratic Union</dt>
+            <dd>Friedrich Merz</dd>
+            <dt>Christian Social Union</dt>
+            <dd>Markus Soeder</dd>
+            <dt>Free Democratic Party</dt>
+            <dd>Christian Lindner</dd>
+            <dt>Free Voters</dt>
+            <dd>Hubert Aiwanger</dd>
+            <dt>The Left</dt>
+            <dd>Janine Wissler and Martin Schirdewan</dd>
+            <dt>Social Democratic Party</dt>
+            <dd>Saskia Esken and Lars Klingbeil</dd>
+          </dl>
+        </article>
       </section>
       <section id=Environment>
         <h2>Environment</h2>
