--- a/germany.html
+++ b/germany.html
@@ -14,6 +14,7 @@
           <li><a href="#Government">Government</a></li>
           <li><a href="#Environment">Environment</a></li>
       </nav>
+      <img src="heidelberg-castle.jpeg" alt="View of Heidelberg Casttle from town square">
     </header>
     <section id="Introduction">
       <h2>Introduction</h2>
@@ -43,7 +44,7 @@
         </article>
         <article>
           <h3>Religions</h3>
-          <table> <!-- Do I make this a table or descriptive list?-->
+          <table>
             <tr>
               <th>Religion</th>
               <th>Percentage</th>
@@ -177,6 +178,7 @@
             </ul>
           </article>
         </section>
+        <img src="germany-sandwhich-shop.jpeg" alt="sandwhich shop on German street corner">
   </body>
   <footer>
     <p>All information is from <a href="https://www.cia.gov/the-world-factbook/countries/germany/#environment">CIA World Factbook.</a>
