--- a/germany.html
+++ b/germany.html
@@ -10,164 +10,166 @@
       <nav>
         <ul>
           <li><a href="#Indroduction">Introduction</a></li>
-          <li><a href="#People And Society">People And Society</a></li>
+          <li><a href="#People-And-Society">People And Society</a></li>
           <li><a href="#Government">Government</a></li>
           <li><a href="#Environment">Environment</a></li>
+        </ul>
       </nav>
       <img src="heidelberg-castle.jpeg" alt="View of Heidelberg Casttle from town square">
     </header>
-    <section id="Introduction">
-      <h2>Introduction</h2>
-        <p>As Europe's largest economy and second most populous nation (after Russia), Germany is a key member of the continent's economic, political, and defense organizations.</p>
-        <p>European power struggles immersed Germany in two devastating world wars in the first half of the 20th century and left the country occupied by the victorious Allied powers of the US, UK, France, and the Soviet Union in 1945.</p>
-        <p>With the advent of the Cold War, two German states were formed in 1949: the western Federal Republic of Germany <abbr>(FRG)</abbr> and the eastern German Democratic Republic <abbr>(GDR)</abbr>. The democratic FRG embedded itself in key western economic and security organizations, while the communist GDR was on the front line of the Soviet-led Warsaw Pact. The end of the Cold War allowed for German reunification in 1990.</p>
-        <p> Since then, Germany has expended considerable funds to bring eastern productivity and wages up to western standards. In January 1999, Germany and 10 other <abbr title="European Union">EU</abbr> countries introduced a common European exchange currency, the euro. </p>
-    </section>
-    <section id="People And Society">
-      <h2>People And Society</h2>
-        <article>
-          <h3>Population</h3>
-          <p>The country has an estimated population of 84,316,622 as of 2022. Population is decreasing 0.11% as of 2022.</p>
-          <p>Birth rates are 9.08 births per 1000 and death rates are 11.98 deaths per 1000. This explains the decreasing population.</p>
-          <p>Germany is the <a href="https://www.cia.gov/the-world-factbook/field/population/country-comparison">18th most populated country</a> in the world.</p>
-        </article>
-        <article>
-          <h3>Ethnic Groups</h3>
-          <p>Top groups by nationality are as follow:</p>
-            <ol>
-              <li>German</li>
-              <li>Turkish</li>
-              <li>Polish</li>
-              <li>Syrian</li>
-              <li>Romanian</li>
-            </ol>
-        </article>
-        <article>
-          <h3>Religions</h3>
-          <table>
-            <tr>
-              <th>Religion</th>
-              <th>Percentage</th>
-            </tr>
-            <tr>
-              <td>Roman Catholic</td>
-              <td>26.7%</td>
-            </tr>
-            <tr>
-              <td>Protestant</td>
-              <td>24.3%</td>
-            </tr>
-            <tr>
-              <td>Other</td>
-              <td>4.8%</td>
-            </tr>
-            <tr>
-              <td>Muslim</td>
-              <td>3.5%</td>
-            </tr>
-          </table>
-        </article>
+    <main>
+      <section id="Introduction">
+        <h2>Introduction</h2>
+          <p>As Europe's largest economy and second most populous nation (after Russia), Germany is a key member of the continent's economic, political, and defense organizations.</p>
+          <p>European power struggles immersed Germany in two devastating world wars in the first half of the 20th century and left the country occupied by the victorious Allied powers of the US, UK, France, and the Soviet Union in 1945.</p>
+          <p>With the advent of the Cold War, two German states were formed in 1949: the western Federal Republic of Germany <abbr>(FRG)</abbr> and the eastern German Democratic Republic <abbr>(GDR)</abbr>. The democratic FRG embedded itself in key western economic and security organizations, while the communist GDR was on the front line of the Soviet-led Warsaw Pact. The end of the Cold War allowed for German reunification in 1990.</p>
+          <p> Since then, Germany has expended considerable funds to bring eastern productivity and wages up to western standards. In January 1999, Germany and 10 other <abbr title="European Union">EU</abbr> countries introduced a common European exchange currency, the euro. </p>
       </section>
-      <section id="Government">
-        <h2>Government</h2>
-        <article>
-          <h3>Citizenship</h3>
-          <p>There is no citizenship by birth. Citizenship by parentage comes when at least one parent must be a German citizen or a resident alien who has lived in Germany at least 8 years.</p>
-        </article>
-        <article>
-          <h3>Branches of Government</h3>
-          <p>Germany is a federal parliamentary republic. It has a civil law system.</p>
-          <h4>Executive Branch</h4>
-            <dl>
-              <dt>Chief of State</dt>
-              <dd>President Frank-Walter Steinmeier</dd>
-              <dt>Head of Government</dt>
-              <dd>Chancellor Olaf Scholz</dd>
-            </dl>
-          <h4>Legislative Branch</h4>
-            <p>The legislative branch is a bicameral parliament which consists of the Federal Council or Bundesrat and the Federal Diet or Bundestag.</p>
-          <h4>Judicial Branch</h4>
-            <p>The highest court, the Federal Court of Justice, consists of 127 justices. The Federal Constittutional Court is broken up into two senates, each with 18 members.</p>
-        </article>
-        <article>
-          <h3>Political Parties and Leaders</h3>
-          <table>
-            <tr>
-              <th>Party Name</th>
-              <th>Party Leader</th>
-            </tr>
-            <tr>
-              <td>Alliance '90 Greens</td>
-              <td>Ricarda Land and Omid Nouripour</td>
-            </tr>
-            <tr>
-              <td>Alternative for Germany</td>
-              <td>Alice Weidel and Tino Chirupalla</td>
-            </tr>
-            <tr>
-              <td>Christian Democratic Union</td>
-              <td>Friedrich Merz</td>
-            </tr>
-            <tr>
-              <td>Christian Social Union</td>
-              <td>Markus Soeder</td>
-            </tr>
-            <tr>
-              <td>Free Democratic Party</td>
-              <td>Christian Lindner</td>
-            </tr>
-            <tr>
-              <td>Free Voters</td>
-              <td>Hubert Aiwanger</td>
-            </tr>
-            <tr>
-              <td>The Left</td>
-              <td>Janine Wissler and Martin Schirdewan</td>
-            </tr>
-            <tr>
-              <td>Social Democratic Party</td>
-              <td>Saskia Esken and Lars Klingbeil</td>
-            </tr>
-          </table>
-        </article>
-      </section>
-      <section id=Environment>
-        <h2>Environment</h2>
-        <article>
-          <h3>Climate</h3>
-          <p>The climate is temperate and marine, with cool, cloudy, wet winters and summers. There are occasional warm mountain winds.</p>
-        </article>
-        <article>
-          <h3>Land Use</h3>
+      <section id="People-And-Society">
+        <h2>People And Society</h2>
+          <article>
+            <h3>Population</h3>
+            <p>The country has an estimated population of 84,316,622 as of 2022. Population is decreasing 0.11% as of 2022.</p>
+            <p>Birth rates are 9.08 births per 1000 and death rates are 11.98 deaths per 1000. This explains the decreasing population.</p>
+            <p>Germany is the <a href="https://www.cia.gov/the-world-factbook/field/population/country-comparison">18th most populated country</a> in the world.</p>
+          </article>
+          <article>
+            <h3>Ethnic Groups</h3>
+            <p>Top groups by nationality are as follow:</p>
+              <ol>
+                <li>German</li>
+                <li>Turkish</li>
+                <li>Polish</li>
+                <li>Syrian</li>
+                <li>Romanian</li>
+              </ol>
+          </article>
+          <article>
+            <h3>Religions</h3>
             <table>
               <tr>
-                <th>Land Type</th>
+                <th>Religion</th>
                 <th>Percentage</th>
               </tr>
               <tr>
-                <td>agricultural land</td>
-                <td>48%</td>
+                <td>Roman Catholic</td>
+                <td>26.7%</td>
               </tr>
               <tr>
-                <td>Arable land</td>
-                <td>34.1%</td>
-              </tr>
-              <tr>
-                <td>Forest</td>
-                <td>31.8%</td>
-              </tr>
-              <tr>
-                <td>Permanent pasture</td>
-                <td>13.3%</td>
+                <td>Protestant</td>
+                <td>24.3%</td>
               </tr>
               <tr>
                 <td>Other</td>
-                <td>20.2%</td>
+                <td>4.8%</td>
+              </tr>
               <tr>
-                <td>Permanent crops</td>
-                <td>0.6%</td>
+                <td>Muslim</td>
+                <td>3.5%</td>
               </tr>
             </table>
+          </article>
+        </section>
+        <section id="Government">
+          <h2>Government</h2>
+          <article>
+            <h3>Citizenship</h3>
+            <p>There is no citizenship by birth. Citizenship by parentage comes when at least one parent must be a German citizen or a resident alien who has lived in Germany at least 8 years.</p>
+          </article>
+          <article>
+            <h3>Branches of Government</h3>
+            <p>Germany is a federal parliamentary republic. It has a civil law system.</p>
+            <h4>Executive Branch</h4>
+              <dl>
+                <dt>Chief of State</dt>
+                <dd>President Frank-Walter Steinmeier</dd>
+                <dt>Head of Government</dt>
+                <dd>Chancellor Olaf Scholz</dd>
+              </dl>
+            <h4>Legislative Branch</h4>
+              <p>The legislative branch is a bicameral parliament which consists of the Federal Council or Bundesrat and the Federal Diet or Bundestag.</p>
+            <h4>Judicial Branch</h4>
+              <p>The highest court, the Federal Court of Justice, consists of 127 justices. The Federal Constittutional Court is broken up into two senates, each with 18 members.</p>
+          </article>
+          <article>
+            <h3>Political Parties and Leaders</h3>
+            <table>
+              <tr>
+                <th>Party Name</th>
+                <th>Party Leader</th>
+              </tr>
+              <tr>
+                <td>Alliance '90 Greens</td>
+                <td>Ricarda Land and Omid Nouripour</td>
+              </tr>
+              <tr>
+                <td>Alternative for Germany</td>
+                <td>Alice Weidel and Tino Chirupalla</td>
+              </tr>
+              <tr>
+                <td>Christian Democratic Union</td>
+                <td>Friedrich Merz</td>
+              </tr>
+              <tr>
+                <td>Christian Social Union</td>
+                <td>Markus Soeder</td>
+              </tr>
+              <tr>
+                <td>Free Democratic Party</td>
+                <td>Christian Lindner</td>
+              </tr>
+              <tr>
+                <td>Free Voters</td>
+                <td>Hubert Aiwanger</td>
+              </tr>
+              <tr>
+                <td>The Left</td>
+                <td>Janine Wissler and Martin Schirdewan</td>
+              </tr>
+              <tr>
+                <td>Social Democratic Party</td>
+                <td>Saskia Esken and Lars Klingbeil</td>
+              </tr>
+            </table>
+          </article>
+        </section>
+        <section id=Environment>
+          <h2>Environment</h2>
+          <article>
+            <h3>Climate</h3>
+            <p>The climate is temperate and marine, with cool, cloudy, wet winters and summers. There are occasional warm mountain winds.</p>
+          </article>
+          <article>
+            <h3>Land Use</h3>
+              <table>
+                <tr>
+                  <th>Land Type</th>
+                  <th>Percentage</th>
+                </tr>
+                <tr>
+                  <td>agricultural land</td>
+                  <td>48%</td>
+                </tr>
+                <tr>
+                  <td>Arable land</td>
+                  <td>34.1%</td>
+                </tr>
+                <tr>
+                  <td>Forest</td>
+                  <td>31.8%</td>
+                </tr>
+                <tr>
+                  <td>Permanent pasture</td>
+                  <td>13.3%</td>
+                </tr>
+                <tr>
+                  <td>Other</td>
+                  <td>20.2%</td>
+                <tr>
+                  <td>Permanent crops</td>
+                  <td>0.6%</td>
+                </tr>
+              </table>
           </article>
           <article>
             <h3>Major Rivers</h3>
@@ -178,9 +180,10 @@
             </ul>
           </article>
         </section>
-        <img src="germany-sandwhich-shop.jpeg" alt="sandwhich shop on German street corner">
-  </body>
-  <footer>
-    <p>All information is from <a href="https://www.cia.gov/the-world-factbook/countries/germany/#environment">CIA World Factbook.</a>
-  </footer>
+      </main>
+      <img src="germany-sandwhich-shop.jpeg" alt="sandwhich shop on German street corner">
+      <footer>
+        <p>All information is from <a href="https://www.cia.gov/the-world-factbook/countries/germany/#environment">CIA World Factbook.</a>
+      </footer>
+    </body>
 </html>
