--- a/germany.html
+++ b/germany.html
@@ -3,29 +3,18 @@
   <head>
     <title>Germany</title>
     <meta charset="utf-8">
+    <link href="css/style.css" rel="stylesheet">
   </head>
   <body>
     <header>
       <h1>Germany</h1>
-      <nav>
-        <ul>
-          <li><a href="#Indroduction">Introduction</a></li>
-          <li><a href="#People-And-Society">People And Society</a></li>
-          <li><a href="#Government">Government</a></li>
-          <li><a href="#Environment">Environment</a></li>
-        </ul>
-      </nav>
-      <img src="heidelberg-castle.jpeg" alt="View of Heidelberg Casttle from town square">
     </header>
     <main>
-      <section id="Introduction">
-        <h2>Introduction</h2>
+      <section id="introduction">        <h2>Introduction</h2>
           <p>As Europe's largest economy and second most populous nation (after Russia), Germany is a key member of the continent's economic, political, and defense organizations.</p>
           <p>European power struggles immersed Germany in two devastating world wars in the first half of the 20th century and left the country occupied by the victorious Allied powers of the US, UK, France, and the Soviet Union in 1945.</p>
-          <p>With the advent of the Cold War, two German states were formed in 1949: the western Federal Republic of Germany <abbr>(FRG)</abbr> and the eastern German Democratic Republic <abbr>(GDR)</abbr>. The democratic FRG embedded itself in key western economic and security organizations, while the communist GDR was on the front line of the Soviet-led Warsaw Pact. The end of the Cold War allowed for German reunification in 1990.</p>
-          <p> Since then, Germany has expended considerable funds to bring eastern productivity and wages up to western standards. In January 1999, Germany and 10 other <abbr title="European Union">EU</abbr> countries introduced a common European exchange currency, the euro. </p>
       </section>
-      <section id="People-And-Society">
+      <section id="people-and-society">
         <h2>People And Society</h2>
           <article>
             <h3>Population</h3>
@@ -44,33 +33,8 @@
                 <li>Romanian</li>
               </ol>
           </article>
-          <article>
-            <h3>Religions</h3>
-            <table>
-              <tr>
-                <th>Religion</th>
-                <th>Percentage</th>
-              </tr>
-              <tr>
-                <td>Roman Catholic</td>
-                <td>26.7%</td>
-              </tr>
-              <tr>
-                <td>Protestant</td>
-                <td>24.3%</td>
-              </tr>
-              <tr>
-                <td>Other</td>
-                <td>4.8%</td>
-              </tr>
-              <tr>
-                <td>Muslim</td>
-                <td>3.5%</td>
-              </tr>
-            </table>
-          </article>
         </section>
-        <section id="Government">
+        <section id="government">
           <h2>Government</h2>
           <article>
             <h3>Citizenship</h3>
@@ -88,52 +52,9 @@
               </dl>
             <h4>Legislative Branch</h4>
               <p>The legislative branch is a bicameral parliament which consists of the Federal Council or Bundesrat and the Federal Diet or Bundestag.</p>
-            <h4>Judicial Branch</h4>
-              <p>The highest court, the Federal Court of Justice, consists of 127 justices. The Federal Constittutional Court is broken up into two senates, each with 18 members.</p>
-          </article>
-          <article>
-            <h3>Political Parties and Leaders</h3>
-            <table>
-              <tr>
-                <th>Party Name</th>
-                <th>Party Leader</th>
-              </tr>
-              <tr>
-                <td>Alliance '90 Greens</td>
-                <td>Ricarda Land and Omid Nouripour</td>
-              </tr>
-              <tr>
-                <td>Alternative for Germany</td>
-                <td>Alice Weidel and Tino Chirupalla</td>
-              </tr>
-              <tr>
-                <td>Christian Democratic Union</td>
-                <td>Friedrich Merz</td>
-              </tr>
-              <tr>
-                <td>Christian Social Union</td>
-                <td>Markus Soeder</td>
-              </tr>
-              <tr>
-                <td>Free Democratic Party</td>
-                <td>Christian Lindner</td>
-              </tr>
-              <tr>
-                <td>Free Voters</td>
-                <td>Hubert Aiwanger</td>
-              </tr>
-              <tr>
-                <td>The Left</td>
-                <td>Janine Wissler and Martin Schirdewan</td>
-              </tr>
-              <tr>
-                <td>Social Democratic Party</td>
-                <td>Saskia Esken and Lars Klingbeil</td>
-              </tr>
-            </table>
           </article>
         </section>
-        <section id=Environment>
+        <section id=environment>
           <h2>Environment</h2>
           <article>
             <h3>Climate</h3>
@@ -180,8 +101,8 @@
             </ul>
           </article>
         </section>
+        <div class="shop"><img src=images/german-street.jpg alt="German sandwich shop between other stores"></div>
       </main>
-      <img src="germany-sandwhich-shop.jpeg" alt="sandwhich shop on German street corner">
       <footer>
         <p>All information is from <a href="https://www.cia.gov/the-world-factbook/countries/germany/#environment">CIA World Factbook.</a>
       </footer>
