added author info to grid

--- a/germany.html
+++ b/germany.html
@@ -10,7 +10,8 @@
       <h1>Germany</h1>
     </header>
     <main>
-      <section id="introduction">        <h2>Introduction</h2>
+      <section id="introduction">
+         <h2>Introduction</h2>
           <p>As Europe's largest economy and second most populous nation (after Russia), Germany is a key member of the continent's economic, political, and defense organizations.</p>
           <p>European power struggles immersed Germany in two devastating world wars in the first half of the 20th century and left the country occupied by the victorious Allied powers of the US, UK, France, and the Soviet Union in 1945.</p>
       </section>
@@ -101,7 +102,14 @@
             </ul>
           </article>
         </section>
-        <div class="shop"><img src=images/german-street.jpg alt="German sandwich shop between other stores"></div>
+        <section id="info">
+          <h2>Author Information</h2>
+          <p>This web page was made by Anna Steingruber for the class JMM 341. I hope everyone enjoys this page.</p>
+        </section>
+        <figure>
+          <img src=images/german-street.jpg alt="German sandwich shop between other stores">
+          <figcaption> These shops in Frankfurt show German architecture and daily life. </figcaption>
+        </figure>
       </main>
       <footer>
         <p>All information is from <a href="https://www.cia.gov/the-world-factbook/countries/germany/#environment">CIA World Factbook.</a>
