almost the final product

--- a/germany.html
+++ b/germany.html
@@ -12,54 +12,37 @@
     <main>
       <section id="introduction">
          <h2>Introduction</h2>
-          <p>As Europe's largest economy and second most populous nation (after Russia), Germany is a key member of the continent's economic, political, and defense organizations.</p>
-          <p>European power struggles immersed Germany in two devastating world wars in the first half of the 20th century and left the country occupied by the victorious Allied powers of the US, UK, France, and the Soviet Union in 1945.</p>
+          <p>Germany is a key member of the continent's economic and political rganizations.</p>
+          <p>European power struggles immersed Germany in two world wars in the 20th century and left the country occupied by the Allied powers of the US, UK, France, and the Soviet Union in 1945.</p>
       </section>
       <section id="people-and-society">
         <h2>People And Society</h2>
           <article>
             <h3>Population</h3>
-            <p>The country has an estimated population of 84,316,622 as of 2022. Population is decreasing 0.11% as of 2022.</p>
-            <p>Birth rates are 9.08 births per 1000 and death rates are 11.98 deaths per 1000. This explains the decreasing population.</p>
+            <p>The country has an estimated population of 84,316,622 as of 2022. </p>
             <p>Germany is the <a href="https://www.cia.gov/the-world-factbook/field/population/country-comparison">18th most populated country</a> in the world.</p>
           </article>
           <article>
             <h3>Ethnic Groups</h3>
-            <p>Top groups by nationality are as follow:</p>
-              <ol>
-                <li>German</li>
-                <li>Turkish</li>
-                <li>Polish</li>
-                <li>Syrian</li>
-                <li>Romanian</li>
-              </ol>
+            <p>Top groups by nationality include German, Turkish, Polish, and Syrian.</p>
           </article>
         </section>
         <section id="government">
           <h2>Government</h2>
           <article>
             <h3>Citizenship</h3>
-            <p>There is no citizenship by birth. Citizenship by parentage comes when at least one parent must be a German citizen or a resident alien who has lived in Germany at least 8 years.</p>
+            <p>Citizenship by parentage comes when at least one parent must be a German citizen or a resident alien who has lived in Germany at least 8 years.</p>
           </article>
           <article>
             <h3>Branches of Government</h3>
             <p>Germany is a federal parliamentary republic. It has a civil law system.</p>
-            <h4>Executive Branch</h4>
-              <dl>
-                <dt>Chief of State</dt>
-                <dd>President Frank-Walter Steinmeier</dd>
-                <dt>Head of Government</dt>
-                <dd>Chancellor Olaf Scholz</dd>
-              </dl>
-            <h4>Legislative Branch</h4>
-              <p>The legislative branch is a bicameral parliament which consists of the Federal Council or Bundesrat and the Federal Diet or Bundestag.</p>
           </article>
         </section>
         <section id=environment>
           <h2>Environment</h2>
           <article>
             <h3>Climate</h3>
-            <p>The climate is temperate and marine, with cool, cloudy, wet winters and summers. There are occasional warm mountain winds.</p>
+            <p>The climate is temperate and marine, with cool, cloudy, wet winters and summers.</p>
           </article>
           <article>
             <h3>Land Use</h3>
@@ -87,28 +70,16 @@
                 <tr>
                   <td>Other</td>
                   <td>20.2%</td>
-                <tr>
-                  <td>Permanent crops</td>
-                  <td>0.6%</td>
-                </tr>
               </table>
           </article>
-          <article>
-            <h3>Major Rivers</h3>
-            <ul>
-              <li>Danube river source</li>
-              <li>Elbe riber mouth</li>
-              <li>Rhine</li>
-            </ul>
-          </article>
         </section>
-        <section id="info">
-          <h2>Author Information</h2>
+        <section id=info>
+          <h2>Author Info</h2>
           <p>This web page was made by Anna Steingruber for the class JMM 341. I hope everyone enjoys this page.</p>
         </section>
         <figure>
-          <img src=images/german-street.jpg alt="German sandwich shop between other stores">
-          <figcaption> These shops in Frankfurt show German architecture and daily life. </figcaption>
+          <img src=images/german-street.jpg alt="A German street view with potted flowers at the forefront.">
+          <figcaption> This street in Frankfurt, Germany shows typical German architecture. </figcaption>
         </figure>
       </main>
       <footer>
