added overflow scroll

--- a/germany.html
+++ b/germany.html
@@ -67,15 +67,13 @@
                   <td>Permanent pasture</td>
                   <td>13.3%</td>
                 </tr>
-                <tr>
-                  <td>Other</td>
-                  <td>20.2%</td>
               </table>
           </article>
         </section>
         <section id=info>
           <h2>Author Info</h2>
-          <p>This web page was made by Anna Steingruber for the class JMM 341. I hope everyone enjoys this page.</p>
+          <p>This web page was made by Anna Steingruber for the class JMM 341.</p>
+          <p>I hope everyone enjoys this page.</p>
         </section>
         <figure>
           <img src=images/german-street.jpg alt="A German street view with potted flowers at the forefront.">
